Updates to the Results and Discussion section (Experiment 2).

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,8 +1,9 @@
 @inproceedings{rafael2014community,
-  title={Community Resources for Enabling Research in Distributed Scientific Workflows},
-  author={Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
-  booktitle={the 10th IEEE International Conference on e-Science}, 
-  year={2014},
+	title={Community Resources for Enabling Research in Distributed Scientific Workflows},
+	author={Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
+	booktitle={the 10th IEEE International Conference on e-Science}, 
+	year={2014},
+	pages={to appear},
 }
 
 @article{diaconis1979conjugate,
